--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,10 @@
 name: fire_moneytor
 description: A new Flutter project.
 
+
+
+
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +38,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  auto_size_text: ^3.0.0
+  syncfusion_flutter_charts: ^19.3.55
 
 dev_dependencies:
   flutter_test:
