--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
   syncfusion_flutter_charts: ^19.3.55
+  multi_select_item: ^1.0.3
+  flutter_multi_select_items: ^0.1.1
 
 dev_dependencies:
   flutter_test:
