--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   syncfusion_flutter_charts: ^19.3.55
   multi_select_item: ^1.0.3
   flutter_multi_select_items: ^0.1.1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
