--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fire_moneytor">
    <application
-        android:label="fire_moneytor"
+        android:label="FIRE Moneytor"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
